--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Dashboard</title>
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Firebase libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
@@ -20,7 +22,7 @@
       <a href="profile.html">Profile</a>
     </nav>
   </header>
-
+  
   <h1>Dashboard</h1>
   <div id="character-section">
     <div id="character-form" style="display:none;">
